se cambian premium con precios

--- a/index.html
+++ b/index.html
@@ -89,29 +89,26 @@
       <div class="c4">
         <h4 class="premium">Paquetes Premium</h4>
         <hr class="premium">
+        
+        <input id="vtv" type="checkbox" name="premium7" value="619"><label for="vtv">VTV-------></label> 
+        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-309"><label class="rvpEspacio" for="rvp7">50%</label> <br>
         <input id="hbo" type="checkbox" name="premium1" value="610"><label class="rvpValor" for="hbo">Hbo ---------></label>
         <input class="cheEspacio" id="rvp1" type="checkbox" name="rvp1" value="-305"><label class="rvpEspacio" for="rvp1">50%</label><br>
+        <input id="universal" type="checkbox" name="premium11" value="590"><label for="universal">Universal-----></label>
+        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-295"><label class="rvpEspacio" for="rvp8">50%</label> <br>
         <input id="hotpack" type="checkbox" name="premium2" value="659"><label class="rvpValor" for="hotpack">Hot Pack ---------></label>
         <input class="cheEspacio" id="rvp2" type="checkbox" name="rvp2" value="-329"><label class="rvpEspacio" for="rvp2">50%</label><br>
         <input id="play" type="checkbox" name="premium3" value="384"><label for="play">Play Boy-></label>
         <input class="cheEspacio" id="rvp3" type="checkbox" name="rvp3" value="-192"><label class="rvpEspacio" for="rvp3">50%</label> <br>   
-        <input id="tnthd" type="checkbox" name="premium4" value="12790"><label for="tnthd">Tnt HD $12.790--></label>
-        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-6395"><label class="rvpEspacio" for="rvp4">50%</label> <br>
-        <input id="tnthdn" type="checkbox" name="premium5" value="13710"><label for="tnthdn">Tnt HD $13.710--></label>
-        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value="-6855"><label class="rvpEspacio" for="rvp5">50%</label> <br>
-        <input id="hbo" type="checkbox" name="premium6" value="8960"><label for="hbo">Hbo-----------------></label>
-        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value="-4480"><label class="rvpEspacio" for="rvp6">50%</label> <br>
-        <input id="universal" type="checkbox" name="premium7" value="8960"><label for="universal">Universal----------></label> 
-        <input class="cheEspacio" id="rvp7" type="checkbox" name="rvp7" value="-4480"><label class="rvpEspacio" for="rvp7">50%</label> <br>
-        <input id="Paramount" type="checkbox" name="premium15" value="3450"><label for="Paramount">Paramount+</label> <br>
-        <input id="foxsport" type="checkbox" name="premium11" value="11280"><label for="foxsport">Fox Sport----------></label>
-        <input class="cheEspacio" id="rvp8" type="checkbox" name="rvp8" value="-5640"><label class="rvpEspacio" for="rvp8">50%</label> <br>
-        <input id="hotpack" type="checkbox" name="premium12" value="9770"><label for="hotpack">Hot Pack-----------></label>
-        <input class="cheEspacio" id="rvp9" type="checkbox" name="rvp9" value="-4885"><label class="rvpEspacio" for="rvp9">50%</label> <br>
-        <input id="exxotico" type="checkbox" name="premium13" value="9770"><label for="exxotico">Exxotico-----------></label>
-        <input class="cheEspacio" id="rvp10" type="checkbox" name="rvp10" value="-4885"><label class="rvpEspacio" for="rvp10">50%</label> <br>
-        <input id="full" type="checkbox" name="premium14" value="1730"><label for="full">Full Service-------></label>
-        <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-865"><label class="rvpEspacio" for="rvp11">50%</label> <br>
+        <input id="venus" type="checkbox" name="premium4" value="384"><label for="venus">Venus--></label>
+        <input class="cheEspacio" id="rvp4" type="checkbox" name="rvp4" value="-192"><label class="rvpEspacio" for="rvp4">50%</label> <br>
+        <input id="nhk" type="checkbox" name="premium5" value="410"><label for="nhk">NHK--></label>
+        <input class="cheEspacio" id="rvp5" type="checkbox" name="rvp5" value=""><label class="rvpEspacio" for="rvp5">50%</label> <br>
+        <input id="globo" type="checkbox" name="premium6" value="600"><label for="globo">Globo--------></label>
+        <input class="cheEspacio" id="rvp6" type="checkbox" name="rvp6" value=""><label class="rvpEspacio" for="rvp6">50%</label> <br>
+        <input id="Paramount" type="checkbox" name="premium15" value="159"><label for="Paramount">Paramount+</label> <br>
+        <input id="full" type="checkbox" name="premium14" value="160"><label for="full">Full Service-------></label>
+        <input class="cheEspacio" id="rvp11" type="checkbox" name="rvp11" value="-80"><label class="rvpEspacio" for="rvp11">50%</label> <br>
         </div> 
     <div class="c5">
     <h4 class="rvo">Promociones Rvo</h4>
